--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,6 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'adopt'
-      - run: cd my-site-back
+          distribution: 'adopt' 
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verifyrun
+        run: cd my-site-back && mvn --batch-mode --update-snapshots verifyrun
