--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,4 @@ jobs:
           java-version: '11'
           distribution: 'adopt' 
       - name: Build with Maven
-        run: cd my-site-back && mvn --batch-mode --update-snapshots verifyrun
+        run: cd my-site-back && mvn clean verify
