--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,14 +4,31 @@ on: [push]
 jobs:
   build-back:
     runs-on: ubuntu-latest
+    container: maven:3.8.1-jdk-11-slim
+
+    services:
+      db:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: dbuser
+          POSTGRES_PASSWORD: dbpass
+          POSTGRES_DB: articles
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt' 
       - name: Build with Maven
+        env:
+          DB_USERNAME: dbuser
+          DB_PASSWORD: dbpass
+          DB_URL: jdbc:postgresql://db:5432/articles
         run: cd my-site-back && mvn clean verify
