--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,46 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - name: Build with Maven
         env:
           DB_USERNAME: dbuser
           DB_PASSWORD: dbpass
           DB_URL: jdbc:postgresql://db:5432/articles
-        run: cd my-site-back && mvn clean verify
+        run: cd my-site-back && mvn clean package -Dmaven.test.skip=true
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Package
+          path: my-site-back/target/*.jar
+  test-back:
+    runs-on: ubuntu-latest
+    container: maven:3.8.1-openjdk-17-slim
+
+    services:
+      db:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: dbuser
+          POSTGRES_PASSWORD: dbpass
+          POSTGRES_DB: articles
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Test with Maven
+        env:
+          DB_USERNAME: dbuser
+          DB_PASSWORD: dbpass
+          DB_URL: jdbc:postgresql://db:5432/articles
+        run: cd my-site-back && mvn test
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Test
+          path: my-site-back/target/surefire-reports
