Removed run-name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
 name: CI
-run-name: ${{ github.event.head_commit.message }}
 on: [push]
 jobs:
   build-back:
@@ -35,6 +34,17 @@ jobs:
         with:
           name: Package
           path: my-site-back/target/*.jar
+  build-front:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Use Node
+        uses: actions/
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Build front
+        run: cd my-site-front && 
+  
   test-back:
     needs: build-back
     runs-on: ubuntu-latest
