--- a/my-site-back/src/main/resources/application.properties
+++ b/my-site-back/src/main/resources/application.properties
@@ -3,6 +3,7 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=${DB_USERNAME}
 quarkus.datasource.password=${DB_PASSWORD}
 quarkus.datasource.jdbc.url=${DB_URL}
+quarkus.package.type=uber-jar
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:4200
