--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,7 @@ jobs:
   test-back:
     needs: [build-back, build-front]
     runs-on: ubuntu-latest
+    container: maven:3.8.1-openjdk-17-slim
 
     services:
       db:
@@ -84,12 +85,6 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-          cache: maven
       - name: Test with Maven
         env:
           DB_USERNAME: dbuser
