--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,46 +1,6 @@
 name: CI
 on: [push]
 jobs:
-  build-back:
-    runs-on: ubuntu-latest
-
-    services:
-      db:
-        # Docker Hub image
-        image: postgres
-        # Provide the password for postgres
-        env:
-          POSTGRES_USER: dbuser
-          POSTGRES_PASSWORD: dbpass
-          POSTGRES_DB: articles
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-    
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-          cache: maven
-      - name: Build with Maven
-        env:
-          DB_USERNAME: dbuser
-          DB_PASSWORD: dbpass
-          DB_URL: jdbc:postgresql://db:5432/articles
-        run: cd my-site-back && mvn clean package -Dmaven.test.skip=true
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: Package
-          path: my-site-back/target/*.jar
-
   build-front:
     runs-on: ubuntu-latest
 
@@ -55,14 +15,13 @@ jobs:
         run: cd my-site-front && npm i
       - name: Build front
         run: cd my-site-front && npm run build
-      - name: Upload artifacts
+      - name: Upload front
         uses: actions/upload-artifact@v3
         with:
-          name: Front
+          name: front
           path: my-site-front/dist/my-site-front
   
   test-back:
-    needs: [build-back, build-front]
     runs-on: ubuntu-latest
     container: maven:3.8.1-openjdk-17-slim
 
@@ -91,8 +50,35 @@ jobs:
           DB_PASSWORD: dbpass
           DB_URL: jdbc:postgresql://db:5432/articles
         run: cd my-site-back && mvn test
-      - name: Upload artifacts
+      - name: Upload test results
         uses: actions/upload-artifact@v3
         with:
           name: Test
           path: my-site-back/target/surefire-reports
+  
+  build-back:
+    needs: [build-front, test-back]
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          cache: maven
+      - name: Download front
+        uses: actions/download-artifact@v3
+        with:
+          name: front
+      - name: Move front to resources
+        run: cp -a front/. my-site-back/src/main/resources/META-INF/resources
+      - name: Build with Maven
+        run: cd my-site-back && mvn clean package -Dmaven.test.skip=true
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: Package
+          path: my-site-back/target/*.jar
