--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Test with Maven
         env:
-          DB_USERNAME: dbuser
-          DB_PASSWORD: dbpass
+          POSTGRES_USER: dbuser
+          POSTGRES_PASSWORD: dbpass
           DB_URL: jdbc:postgresql://db:5432/articles
         run: cd my-site-back && mvn test
       - name: Upload test results
