--- a/my-site-back/src/main/resources/application.properties
+++ b/my-site-back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=${POSTGRES_USER}
-quarkus.datasource.password=${POSTGRES_PASSWORD}
+quarkus.datasource.username=${DB_USERNAME}
+quarkus.datasource.password=${DB_PASSWORD}
 quarkus.datasource.jdbc.url=${DB_URL}
 quarkus.package.type=uber-jar
 
