Set up log warn

--- a/my-site-back/src/main/resources/application.properties
+++ b/my-site-back/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+org.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=${DB_USERNAME}
