--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,18 +1,18 @@
 task:
   name: "Test-back"
   env:
-    DB_USERNAME: dbuser
-    DB_PASSWORD: dbpass
+    DB_USERNAME: "dbuser"
+    DB_PASSWORD: "dbpass"
     DB_URL: "jdbc:postgresql://postgres:5432/articles"
   container:
     image: maven:3.8.1-openjdk-17-slim
     additional_containers:
-      - name: db
+      - name: postgres
         image: postgres
         env:
-          POSTGRES_USER: dbuser
-          POSTGRES_PASSWORD: dbpass
-          POSTGRES_DB: articles
+          POSTGRES_USER: "dbuser"
+          POSTGRES_PASSWORD: "dbpass"
+          POSTGRES_DB: "articles"
         port: 5432
   test-script:
     - cd my-site-back
