--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,3 +17,6 @@ task:
   test-script:
     - cd my-site-back
     - mvn test -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener
+  always:
+    junit_artifacts:
+      path: "my-site-back/target/surefire-reports/TEST-*.xml"
