--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -18,7 +18,7 @@ task:
     - cd my-site-back
     - mvn test -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener
   always:
-    junit_artifacts:
+    junit_result_artifacts:
       path: "my-site-back/target/surefire-reports/TEST-*.xml"
       type: text/xml
       format: junit
