--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,22 +5,34 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
+  test-back:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/base:stable
+      - image: maven:3.8.1-openjdk-17-slim
+      - image: postgres
+        name: db
+        environment:
+          POSTGRES_USER: "dbuser"
+          POSTGRES_PASSWORD: "dbpass"
+          POSTGRES_DB: "articles"
+    
+    environment:
+      DB_USERNAME: "dbuser"
+      DB_PASSWORD: "dbpass"
+      DB_URL: "jdbc:postgresql://db:5432/articles"
+
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: "Test back"
+          command: "cd my-site-back && mvn test -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
     jobs:
-      - say-hello
+      - test-back
