--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,9 @@ jobs:
             cd my-site-back
             mvn test -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
       - run:
+          name: PWD
+          command: pwd
+      - run:
           name: Save test results
           command: |
             mkdir -p ~/test-results/junit/
