--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,5 +15,6 @@ environment:
   DB_URL: "jdbc:postgresql://localhost:5432/articles"
 
 test_script:
+  - ls /usr/lib/jvm
   - cd my-site-back
   - mvn test -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener
