--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,7 +14,12 @@ environment:
   DB_PASSWORD: postgres
   DB_URL: "jdbc:postgresql://localhost:5432/articles"
 
+install:
+  - sh: |
+      if [[ -d /usr/lib/jvm/java-17-openjdk-amd64 ]]; then sudo ln -s /usr/lib/jvm/java-17-openjdk-amd64 /usr/lib/jvm/java-17-openjdk; fi;
+      export JAVA_HOME="/usr/lib/jvm/java-17-openjdk";
+      export PATH="$JAVA_HOME:$PATH";
+
 test_script:
-  - ls /usr/lib/jvm
   - cd my-site-back
   - mvn test -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener
