--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,3 +23,5 @@ install:
 test_script:
   - cd my-site-back
   - mvn test -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener
+
+build: off
