--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,9 +25,10 @@ install:
       export JAVA_HOME="/usr/lib/jvm/java-17-openjdk";
       export PATH="$JAVA_HOME:$PATH";
   - sh: |
-      if [[ -z "${MAVEN_OPTS}" ]]; then export MAVEN_OPTS="-Dmaven.repo.local=.m2/repository -Dprofile=title -DprofileFormat=JSON,HTML"; fi;
+      if [[ -z "${MAVEN_OPTS}" ]]; then export MAVEN_OPTS="-Dmaven.repo.local=.m2/repository -DprofileFormat=JSON,HTML"; fi;
       if [[ -d ${HOME}/.m2 ]]; then rm -rf ${HOME}/.m2/repository/top/infra/maven; ls -ahl ${HOME}/.m2; fi;
       export MAVEN_USER_HOME="${PWD}/.m2";
+      cd my-site-back;
       ./mvnw ${MAVEN_GLOBAL_SETTINGS} -version;
 
 test_script:
