--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,7 +25,7 @@ install:
       export JAVA_HOME="/usr/lib/jvm/java-17-openjdk";
       export PATH="$JAVA_HOME:$PATH";
   - sh: |
-      if [[ -z "${MAVEN_OPTS}" ]]; then export MAVEN_OPTS="-Dmaven.repo.local=.m2/repository -DprofileFormat=JSON,HTML"; fi;
+      if [[ -z "${MAVEN_OPTS}" ]]; then export MAVEN_OPTS="-Dmaven.repo.local=.m2/repository -DprofileFormat=JSON,HTML -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener"; fi;
       if [[ -d ${HOME}/.m2 ]]; then rm -rf ${HOME}/.m2/repository/top/infra/maven; ls -ahl ${HOME}/.m2; fi;
       export MAVEN_USER_HOME="${PWD}/.m2";
       cd my-site-back;
@@ -33,6 +33,6 @@ install:
       mvn -version
 
 test_script:
-  - mvn test -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener
+  - ./mvnw -B ${MAVEN_GLOBAL_SETTINGS} test
 
 build: off
