--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -39,9 +39,13 @@ install:
       export PATH="/usr/lib/postgresql/15/bin/postgres:$PATH"
       
 
-test:
+test_script:
   - ps -ef | grep postgres
   - createdb articles
   - ./mvnw -B ${MAVEN_GLOBAL_SETTINGS} test
 
 build: off
+
+on_finish:
+  - sh: |
+      find "$APPVEYOR_BUILD_FOLDER" -type f -name '.*/target/surefire-reports/.*xml' -print0 | xargs -0 -I '{}' curl -F 'file=@{}' "https://ci.appveyor.com/api/testresults/junit/$APPVEYOR_JOB_ID"
