--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,6 @@ jobs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  TT-CI:
+  TTCI:
     jobs:
       - test-back
