Correction github action

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -1,7 +1,8 @@
 name: Pre-release
 on:
   push:
-    - release/**
+    branches:
+      - release/**
 jobs:
   test-back:
     runs-on: ubuntu-latest
